2010-08-10  Kenichi Handa  <handa@m17n.org>

	* language/hebrew.el: Exclude U+05C3 (Hebrew SOF PASUQ) from the
	composable pattern.

2010-08-09  Chong Yidong  <cyd@stupidchicken.com>

	* emacs-lisp/package.el (package-version-split)
	(package--version-first-nonzero, package-version-compare):
	Functions removed.
	(package-directory-list, package-load-all-descriptors)
	(package--built-in, package-activate, define-package)
	(package-installed-p, package-compute-transaction)
	(package-read-all-archive-contents)
	(package--add-to-archive-contents, package-buffer-info)
	(package-tar-file-info, package-list-packages-internal): Use
	version-to-list and version-list-*.

	* emacs-lisp/package-x.el (package-upload-buffer-internal): Use
	version-to-list.
	(package-upload-buffer-internal): Use version-list-<=.

2010-08-09  Kenichi Handa  <handa@m17n.org>

	* language/hebrew.el: Exclude U+05BD (Hebrew MAQAF) from the
	composable pattern.

2010-08-08  Chong Yidong  <cyd@stupidchicken.com>

	* tutorial.el (tutorial--default-keys): C-d is now bound to
	delete-forward-char (Bug#6826).

	* mouse.el (mouse-drag-track): Remove accidentally-removed check
	for `double' value of mouse-1-click-follows-link (Bug#6807).

2010-08-08  Johan Bockgård  <bojohan@gnu.org>

	* replace.el (replace-highlight): Bind isearch-forward and
	isearch-error, ensuring that highlighting is updated if the user
	switches the search direction (Bug#6808).

	* isearch.el (isearch-lazy-highlight-forward): New var.
	(isearch-lazy-highlight-new-loop, isearch-lazy-highlight-search):
	(isearch-lazy-highlight-update): Use it.

2010-08-08  Kenichi Handa  <handa@m17n.org>

	* international/mule.el (define-charset): Store NAME as :base property.
	(ctext-non-standard-encodings-table): Pay attention to charset aliases.
	(ctext-pre-write-conversion): Sort ctext-standard-encodings by the
	current priority.  Force using the designation of the specific
	charset by adding `charset' text property.  Improve the whole algorithm.
